<resources>
    <string name="app_name">Crypto Stock Viewer</string>
    <string name="textHeader">Select Crypto Pairs</string>
    <string name="btnGetPairs">Get Data</string>
    <string name="graphString">Graphs</string>
    <string name="btnShare">Share Data</string>
    <string name="detailactivity">Detail Crypto Pair</string>
    <string name="chooserTitle">Share with ...</string>
    <string name="btnBack"><![CDATA[<Back]]></string>
    <string name="backEditHint">back Edit text</string>
    <string name="hdrCheckBoxes">Change Data Content</string>
    <string name="noGraphStr">No Graph</string>
    <string name="noShareStr">No share</string>
    <string name="noBackStr">No Back</string>
    <string name="hintTextPairs">Text Pairs</string>
    <string name="imgListCPLeft">crypto image Left</string>
    <string name="imgListCPRighth">crypto image Right</string>
    <string-array name="cryptoPairs">
        <item>BTC/USD</item>
        <item>BTC/LTC</item>
        <item>BTC/ETH</item>
        <item>LTC/USD</item>
        <item>LTC/BTC</item>
        <item>LTC/ETH</item>
        <item>ETH/USD</item>
        <item>ETH/BTC</item>
        <item>ETH/LTC</item>
    </string-array>
    <string-array name="cryptoData">
        <item>6483.43</item>
        <item>0.00234</item>
        <item>0.01323</item>
        <item>68.32</item>
        <item>0.00412</item>
        <item>0.01234</item>
        <item>342.23</item>
        <item>0.02123</item>
        <item>0.00323</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
