<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gb.pavelkorzhenko.cryptostockviewer.CryptoDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textCurrenPair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="BTC/ETH"
            android:textSize="40sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textCurrentEx"
            tools:text="0.02222"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graphString"
            android:textAlignment="center" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/imgGraphID"
            android:layout_width="match_parent"
            android:layout_height="280dp" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnShare" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBack" />

    </LinearLayout>

</FrameLayout>
