<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gb.pavelkorzhenko.cryptostockviewer.CryptoStockViewer">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textHeader"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerPairChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/cryptoPairs" />

        <Button
            android:id="@+id/getBtnPairs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGetPairs" />

        <EditText
            android:id="@+id/backEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/backEditHint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textCurrentEx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Graphs"
            android:textAlignment="center" />
        <com.jjoe64.graphview.GraphView
            android:id="@+id/imgGraphID"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:srcCompat="@android:color/background_light"/> -->

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
